add Weibull, Waloddi to references

--- a/bb.bib
+++ b/bb.bib
@@ -1,3 +1,10 @@
+@article{ww51,
+author = {Weibull, Waloddi},
+title = {A statistical distribution function of wide applicability},
+year = {1951},
+journal = {ASME Journal of Applied Mechanics},
+pages = {293--297}}
+
 @book{rp72,
   title={Demographic Analysis; Methods, Results, Applications},
   author={Pressat, R. and Matras, J. and Keyfitz, N.},
